--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,3 +1,15 @@
-.FuenteTexto{
-    color:white;
+h6{
+    color: white;
+    font-family:sans-serif;
+}
+footer
+{
+    padding-top: 40px;
+    display: flex;
+    justify-content: space-between;
+
+}
+ul{
+    display: flex;
+    align-items: flex-end;
 }
